--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,26 +79,17 @@
   font-family: quicksand;
   font-size: 60px;
   color: #0A2F43; 
-  margin-top: 33%;
 }
 
 .intro-events .intro-details {
   font-family: quicksand;
+  font-size: 18px;
+  font-weight: bold; 
+  text-align: center;
   color: #0A2F43; 
   font-weight: bold;
-  padding-bottom: 5%;
-  padding-top: 5%;
-  padding-left: 5%; 
-  padding-right: 5%;
-  margin-right: 5%;
-  margin-left: 5%;
   border: dotted 2px #E30641; 
   border-radius: 2%;
-}
-
-.container-events .intro-details h4 {
-  font-size: 35px;
-  font-weight: bold; 
 }
 
 
