--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,25 +63,25 @@
 
 .event-title {
   color: #E30641;
-  font-family: Zhi Mang Xing;
-  font-size: 50px;
+  font-family: karla;
+  font-size: 20px;
   letter-spacing: 3px;
   text-align: left;
-  margin-left: 4%;
-  padding-top: 35%;
+  margin-left: -3%;
+  padding-top: 10%;
   position: relative;
 }
 
 .container-events {
-  margin-top: 8%;
-  text-align: center;
-  font-family: karla;
-  top: 0;
-  left: 0;
-  right: 0;
-}
-
-
+    margin-top: 5%;
+    text-align: center;
+    font-family: karla;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+  }
 
 .intro-events h5 {
   font-family: quicksand;
@@ -192,7 +192,7 @@
   font-size: 40px;
   margin-top: 2%;
   margin-right: 45%;
-  padding-bottom: 2%;
+  padding-bottom: 10%;
   font-family: karla;
 }
 
@@ -200,23 +200,19 @@
   font-size: 80px;
   color: #0A2F43;
   font-family: karla;
-  margin-top: -25%;
+  margin-top: -10%;
 }
 
 
 .discover .cover-container .discover-people {
   position: relative;
-  float: left;
-  margin-top: -20%;
-  margin-left: 23%;
-  
+  float: left;  
 }
 
 .discover .cover-container .discover-events {
   position: relative;
   margin-right: 5%;
   float: right;
-  margin-top: -20%;
 }
 
 
