--- a/styles/devices.css
+++ b/styles/devices.css
@@ -1036,7 +1036,7 @@
       margin-top: 50%;
     }
 
-    .intro-events .intro-details {
+    .container-events .intro-details {
       padding-bottom: 2%;
       padding-top: 2%;
       padding-left: 5%; 
@@ -1155,7 +1155,7 @@
       font-size: 35px;
       text-align: center;
     }
-   
+ 
     .container-teams .card-body2 .card-title {
       font-size: 35px;
       text-align: center;
